[package]
name = "duckdb-bitstring"
authors = ["Thomas Daniels <daniels.thomas@pm.me>"]
version = "0.6.0"
edition = "2021"
categories = ["database"]
license = "MIT"
keywords = ["database", "duckdb"]
readme = "README.md"
repository = "https://github.com/thomas-daniels/duckdb-rs-bitstring"
description = "BIT type support for duckdb-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = "1.3"
bit-vec = "0.8"
